@@ -11,6 +11,8 @@
 * New: GridPanel now has a method on_data_changed that can be overridden by children to detect actions that modify data
 * New: New way of Netzke virtual attributes in AR models.
 * New: GridPanel refactoring.
+* Impr: Multi-level column/fields configuration reworked and made more consistent.
+* New: New configuration layer introduced between the AR models and the rest of Netzke widgets. Use AttributesConfigurator to access it.
 
 = v0.5.8 - 2010-03-12
 * Fix: GertThiel's method_missing-related fix enabling better compatibility with other Ruby libs
